hamburger nav added

--- a/parking-storage.html
+++ b/parking-storage.html
@@ -15,7 +15,7 @@
 		<main id="parkingStorage">
 		  </br>
 			<header id="head1">
-				<h1 class="logo"><a style="color:white" href="travisOaks1.html">TRAVIS OAKS</a></h1>
+				<h1 class="logo"><a style="color:white" href="travisOaks1.html">Travis Oaks</a></h1>
 				<!-- FONT AWESOME MEDIA ICONS -->
 				<ul id="media-icons">
 					<li>
@@ -43,13 +43,32 @@
 					target="_blank">2215 Post Road 78704</a></p>
 			</header>
 			<header id="mobile-head1">
-				<h1><a style="color:white" href="travisOaks1.html">TRAVIS OAKS</a></h1>
-				<h5><a style="color:white" href="https://maps.google.com/maps?f=q&amp;
+				<h1 class="travis"><a style="color:white" href="travisOaks1.html">TRAVIS OAKS</a></h1>
+				<h5 class="address"><a style="color:white" href="https://maps.google.com/maps?f=q&amp;
 					hl=en&amp;geocode=&amp;q=2215+Post+Rd,+Austin,+TX+78704&amp;sll=37.0625,-95.677068&amp;
 					sspn=95.737757,111.09375&amp;ie=UTF8&amp;z=16&amp;iwloc=addr&amp;om=1" 
 					target="_blank">2215 Post Road 78704</a></h5>
+
+					<!-- Top Navigation Menu -->
+					<div class="topnav">
+							<a href="#home" class="active">Menu</a>
+							<!-- Navigation links (hidden by default) -->
+							<div id="myLinks">
+									<a href="travisOaks1.html">Home</a>
+									<a href="management.html">Management</a>
+									<a href="property.html">Property Maps</a>
+									<a href="contact.html">Contact</a>
+									<a href="https://travisoaks.frontsteps.com/users/sign_in">Sign In</a>
+									<a href="https://www.facebook.com/TravisOaksHOA/"><i class="fa fa-facebook-official"></i></a>
+							</div>
+							<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+							<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+							<i class="fa fa-bars"></i>
+							</a>
+						</div>
+
 				<!-- FONT AWESOME MEDIA ICONS -->
-				<ul id="mobile-media-icons">
+				<!-- <ul id="mobile-media-icons">
 					<li>
 						<a href="travisOaks1.html" style="color:blue">Home</a>
 					</li>
@@ -68,7 +87,7 @@
 					<li>
 						<a href="https://www.facebook.com/TravisOaksHOA/"><i class="fa fa-facebook-official"></i></a>
 					</li>
-				</ul>
+				</ul> -->
 				<!-- <p class="underLogo"><a style="color:white" href="https://maps.google.com/maps?f=q&amp;
 					hl=en&amp;geocode=&amp;q=2215+Post+Rd,+Austin,+TX+78704&amp;sll=37.0625,-95.677068&amp;
 					sspn=95.737757,111.09375&amp;ie=UTF8&amp;z=16&amp;iwloc=addr&amp;om=1" 
@@ -1284,5 +1303,6 @@
 			<footer class="foot">Travis Oaks&nbsp;&nbsp;2215 Post Road&nbsp;&nbsp;Austin,Tx.&nbsp;&nbsp;78704
 			</footer>
 		</main>
+		<script src="hamburger.js"></script>
 	</body>
 </html>
