--- a/property.html
+++ b/property.html
@@ -15,7 +15,7 @@
 		<main id="property">
 		  </br>
 			<header id="head1">
-				<h1 class="logo"><a style="color:white" href="travisOaks1.html">TRAVIS OAKS</a></h1>
+				<h1 class="logo"><a style="color:white" href="travisOaks1.html">Travis Oaks</a></h1>
 				<!-- FONT AWESOME MEDIA ICONS -->
 				<ul id="media-icons">
 					<li>
@@ -43,36 +43,29 @@
 					target="_blank">2215 Post Road 78704</a></p>
 			</header>
 			<header id="mobile-head1">
-				<h1><a style="color:white" href="travisOaks1.html">TRAVIS OAKS</a></h1>
-				<h5><a style="color:white" href="https://maps.google.com/maps?f=q&amp;
+				<h1 class="travis"><a style="color:white" href="travisOaks1.html">Travis Oaks</a></h1>
+				<h5 class="address"><a style="color:white" href="https://maps.google.com/maps?f=q&amp;
 					hl=en&amp;geocode=&amp;q=2215+Post+Rd,+Austin,+TX+78704&amp;sll=37.0625,-95.677068&amp;
 					sspn=95.737757,111.09375&amp;ie=UTF8&amp;z=16&amp;iwloc=addr&amp;om=1" 
 					target="_blank">2215 Post Road 78704</a></h5>
-				<!-- FONT AWESOME MEDIA ICONS -->
-				<ul id="mobile-media-icons">
-					<li>
-						<a href="travisOaks1.html">Home</a>
-					</li>
-					<li>
-						<a href="management.html">Management</a>
-					</li>
-					<li>
-						<a href="property.html" style="color:blue">Property Maps</a>
-					</li>
-					<li>
-						<a href="contact.html">Contact</a>
-					</li>
-					<li>
-						<a href="https://travisoaks.frontsteps.com/users/sign_in">Sign In</a>
-					</li>
-					<li>
-						<a href="https://www.facebook.com/TravisOaksHOA/"><i class="fa fa-facebook-official"></i></a>
-					</li>
-				</ul>
-				<!-- <p class="underLogo"><a style="color:white" href="https://maps.google.com/maps?f=q&amp;
-					hl=en&amp;geocode=&amp;q=2215+Post+Rd,+Austin,+TX+78704&amp;sll=37.0625,-95.677068&amp;
-					sspn=95.737757,111.09375&amp;ie=UTF8&amp;z=16&amp;iwloc=addr&amp;om=1" 
-					target="_blank">2215 Post Road 78704</a></p> -->
+
+					<!-- Top Navigation Menu -->
+					<div class="topnav">
+							<a href="#home" class="active">Menu</a>
+							<!-- Navigation links (hidden by default) -->
+							<div id="myLinks">
+									<a href="travisOaks1.html">Home</a>
+									<a href="management.html">Management</a>
+									<a href="property.html" style="color:blue">Property Maps</a>
+									<a href="contact.html">Contact</a>
+									<a href="https://travisoaks.frontsteps.com/users/sign_in">Sign In</a>
+									<a href="https://www.facebook.com/TravisOaksHOA/"><i class="fa fa-facebook-official"></i></a>
+							</div>
+							<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+							<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+							<i class="fa fa-bars"></i>
+							</a>
+						</div>
 			</header>
 		    </br>
 			<section id="list-maps">
@@ -80,30 +73,57 @@
 					<h3 class="deeds-maps"><b>PROPERTY MAPS</b></h3>
 					<p class="property-lang">Need to find the water shut off? Find your parking spot? Locate the pool?
 						 Just select from our maps below to find what you need.</p>
-							<ul class="docs">
-								<li><a style="color: crimson" href="building-numbers-map.pdf"><i>Building Numbers Map</i></a></li>
-								<li><a style="color: crimson" href="condo-unit-numbers-map.pdf"><i>Condo Unit Numbers Map</i></a></li>
-								<li><a style="color: crimson" href="water-shut-off-map.pdf"><i>Water Shut Off Map</i></a></li>
-								<li><a style="color: crimson" href="parking-map.pdf"><i>Parking Map</i></a></li>
-								<li><a style="color: crimson" href="parking-storage.html"><i>Parking & Storage Assignment</i></a></li>
-							</ul>
+						  <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+							<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+							<!-- Top Navigation Menu -->
+							<div class="propDox">
+							<a href="#home" class="action1">PROPERTY MAPS</a>
+							<!-- Navigation links (hidden by default) -->
+							<div id="myDox">
+									<a style="color: crimson" href="building-numbers-map.pdf"><i>Building Numbers Map</i></a>
+									<a style="color: crimson" href="condo-unit-numbers-map.pdf"><i>Condo Unit Numbers Map</i></a>
+									<a style="color: crimson" href="water-shut-off-map.pdf"><i>Water Shut Off Map</i></a>
+									<a style="color: crimson" href="parking-map.pdf"><i>Parking Map</i></a>
+									<a style="color: crimson" href="parking-storage.html"><i>Parking & Storage Assignment</i></a>
+							</div>
+							<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+							<a href="javascript:void(0);" class="icon" onclick="myFuncDox()">
+								<i class="fa fa-bars"></i>
+							</a>
+							</div> 
 					<h3 class="deeds-maps">TRAVIS OAKS BY LAWS AND MASTER DEEDS</h3>
 					<p class="property-lang">The documents below, while being an exact copy of the official ones, are not the ones filed with Travis County and therefore have &#8220;non official&#8221; 
 						  watermarked on them.  Residents have access to the official copies on the <a style="color: crimson" href="https://travisoaks.evercondo.com/users/sign_in" target="_blank" rel="noopener">
 						  Travis Oaks HOA Portal</a>, by clicking on the <strong>Files</strong> menu options.</p>
-							<ul class="docs">
-								<li><a style="color: crimson" href="travis-oaks-master-deeds-non-official-copy.pdf"><i>HOA Master Deeds</i></a></li>
-								<li><a style="color: crimson" href="travis-oaks-bylaws-nonoffficial-copy.pdf"><i>HOA By Laws</i></a></li>
-								<li><a style="color: crimson"href="community-awning-storm-door-policy-Aug-2013.pdf"><i>Community, Awning & Storm Door Policy</i></a></li>
-								<li><a style="color: crimson" href="aC-request-Form.pdf"><i>Requests for Architectural Committee Variance</i></a></li>
-								<li><a style="color: crimson" href="TravisOaksWINDOWS_2015.docx"><i>2015 Window Policy</i></a></li>
-								<li><a style="color: crimson" href="TravisOaks_doorpolicy2015.docx"><i>2015 Door & Storm Door Policy</i></a></li>
-							</ul>
+						   <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+							<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+							<!-- Top Navigation Menu -->
+							<div class="deedDox">
+								<a href="#home" class="action2">TRAVIS OAKS BY LAWS AND MASTER DEEDS</a>
+								<!-- Navigation links (hidden by default) -->
+								<div id="myDeeds">
+									<a style="color: crimson" href="travis-oaks-master-deeds-non-official-copy.pdf"><i>HOA Master Deeds</i></a>
+									<a style="color: crimson" href="travis-oaks-bylaws-nonoffficial-copy.pdf"><i>HOA By Laws</i></a>
+									<a style="color: crimson" href="community-awning-storm-door-policy-Aug-2013.pdf"><i>Community, Awning & Storm Door Policy</i></a>
+									<a style="color: crimson" href="aC-request-Form.pdf"><i>Requests for Architectural Committee Variance</i></a>
+									<a style="color: crimson" href="TravisOaksWINDOWS_2015.docx"><i>2015 Window Policy</i></a>
+									<a style="color: crimson" href="TravisOaks_doorpolicy2015.docx"><i>2015 Door & Storm Door Policy</i></a>
+								</div>
+								<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+								<a href="javascript:void(0);" class="icon" onclick="myFuncDeeds()">
+									<i class="fa fa-bars"></i>
+								</a>
+								</div> 
 				</figure>
 			</section>
 			</br>
 			<footer class="foot">Travis Oaks&nbsp;&nbsp;2215 Post Road&nbsp;&nbsp;Austin,Tx.&nbsp;&nbsp;78704
 			</footer>
 		</main>
+		<script src="hamburger.js"></script>
+		<script src="doxBurger.js"></script>
+		<script src="deedBurger.js"></script>
 	</body>
 </html>
