--- a/travisOaks1.html
+++ b/travisOaks1.html
@@ -7,13 +7,17 @@
 	    <meta charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="travisColor1.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+			<!-- Load an icon library to show a hamburger menu (bars) on small screens -->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body style="background-color: grey">
 		<main>
 		  </br>
 			<header id="head1">
-				<h1 class="logo"><a style="color:white" href="travisOaks1.html">TRAVIS OAKS</a></h1>
+				<h1 class="logo"><a style="color:white" href="travisOaks1.html">Travis Oaks</a></h1>
+
 				<!-- FONT AWESOME MEDIA ICONS -->
+
 				<ul id="media-icons">
 					<li>
 						<a href="travisOaks1.html" style="color:blue">Home</a>
@@ -40,13 +44,33 @@
 					target="_blank">2215 Post Road 78704</a></p>
 			</header>
 			<header id="mobile-head1">
-				<h1><a style="color:white" href="travisOaks1.html">TRAVIS OAKS</a></h1>
-				<h5><a style="color:white" href="https://maps.google.com/maps?f=q&amp;
+				<h1 class="travis"><a style="color:white" href="travisOaks1.html">Travis Oaks</a></h1>
+				<h5 class="address"><a style="color:white" href="https://maps.google.com/maps?f=q&amp;
 					hl=en&amp;geocode=&amp;q=2215+Post+Rd,+Austin,+TX+78704&amp;sll=37.0625,-95.677068&amp;
 					sspn=95.737757,111.09375&amp;ie=UTF8&amp;z=16&amp;iwloc=addr&amp;om=1" 
 					target="_blank">2215 Post Road 78704</a></h5>
+
+					<!-- Top Navigation Menu -->
+					<div class="topnav">
+						<a href="#home" class="active">Menu</a>
+						<!-- Navigation links (hidden by default) -->
+						<div id="myLinks">
+								<a href="travisOaks1.html" style="color:blue">Home</a>
+								<a href="management.html">Management</a>
+								<a href="property.html">Property Maps</a>
+								<a href="contact.html">Contact</a>
+								<a href="https://travisoaks.frontsteps.com/users/sign_in">Sign In</a>
+								<a href="https://www.facebook.com/TravisOaksHOA/"><i class="fa fa-facebook-official"></i></a>
+						</div>
+						<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+						<a href="javascript:void(0);" class="icon" onclick="myFunction()">
+						<i class="fa fa-bars"></i>
+						</a>
+					</div>
+
 				<!-- FONT AWESOME MEDIA ICONS -->
-				<ul id="mobile-media-icons">
+
+				<!-- <ul id="mobile-media-icons">
 					<li>
 						<a href="travisOaks1.html" style="color:blue">Home</a>
 					</li>
@@ -65,130 +89,119 @@
 					<li>
 						<a href="https://www.facebook.com/TravisOaksHOA/"><i class="fa fa-facebook-official"></i></a>
 					</li>
-				</ul>
-				<!-- <p class="underLogo"><a style="color:white" href="https://maps.google.com/maps?f=q&amp;
-					hl=en&amp;geocode=&amp;q=2215+Post+Rd,+Austin,+TX+78704&amp;sll=37.0625,-95.677068&amp;
-					sspn=95.737757,111.09375&amp;ie=UTF8&amp;z=16&amp;iwloc=addr&amp;om=1" 
-					target="_blank">2215 Post Road 78704</a></p> -->
+				</ul> -->
 			</header>
 		    </br>
-            <!-- <div id="hero"></div> -->
-            <!-- Slideshow container -->
-            <div class="slideshow-container">
+			<!-- Slideshow container -->
+			
+            <div id="desktop-slide" class="slideshow-container">
             <!-- Full-width images with number and caption text --> 
-                <div style="display:unset;" class="mySlides fade">
-					<img src="marquis1.jpg" style="width:100%; height: 560px; border-radius: 8px"> 
+                <div style="display:unset;" class="myDesktopSlides fade">
+					<img src="marquis1.jpg" style="width:100%; height: 620px; border-radius: 4px"> 
 					<div class="text">2215 Post Road</div>
                 </div>
-                <div class="mySlides fade">
-					<img src="pool11.jpg" style="width:100%; height: 560px; border-radius: 8px"> 
+                <div class="myDesktopSlides fade">
+					<img src="pool11.jpg" style="width:100%; height: 620px; border-radius: 4px"> 
 					<div class="text">Pool</div>
                 </div>
-                <div class="mySlides fade">
-					<img src="northEast1.jpg" style="width:100%; height: 560px; border-radius: 8px"> 
+                <div class="myDesktopSlides fade">
+					<img src="northEast1.jpg" style="width:100%; height: 620px; border-radius: 4px"> 
 					<!-- <div class="text">Caption Three</div> -->
 				</div>
-				<div class="mySlides fade">
-					<img src="northWest1.jpg" style="width:100%; height: 560px; border-radius: 8px"> 
+				<div class="myDesktopSlides fade">
+					<img src="northWest1.jpg" style="width:100%; height: 620px; border-radius: 4px"> 
 					<!-- <div class="text">Caption Three</div> -->
 				</div>
-				<div class="mySlides fade">
-					<img src="southEast1.jpg" style="width:100%; height: 560px; border-radius: 8px"> 
+				<div class="myDesktopSlides fade">
+					<img src="southEast1.jpg" style="width:100%; height: 620px; border-radius: 4px"> 
 					<!-- <div class="text">Caption Three</div> -->
 				</div>
-				<div class="mySlides fade">
-					<img src="pool12.jpg" style="width:100%; height: 560px; border-radius: 8px"> 
+				<div class="myDesktopSlides fade">
+					<img src="pool12.jpg" style="width:100%; height: 620px; border-radius: 4px"> 
 					<div class="text">Pool</div>
 				</div>
-				<div class="mySlides fade">
-					<img src="dogPark1.jpg" style="width:100%; height: 560px; border-radius: 8px"> 
+				<div class="myDesktopSlides fade">
+					<img src="dogPark1.jpg" style="width:100%; height: 620px; border-radius: 4px"> 
 					<div class="text">Dog Park</div>
 				</div>
-				<div class="mySlides fade">
-					<img src="exit1.jpg" style="width:100%; height: 560px; border-radius: 8px"> 
+				<div class="myDesktopSlides fade">
+					<img src="exit1.jpg" style="width:100%; height: 620px; border-radius: 4px"> 
 					<div class="text">Exit</div>
                 </div>
                 <!-- Next and previous buttons -->
 				<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 				<a class="next" onclick="plusSlides(1)">&#10095;</a>
 			</div> 
-            <!-- The dots/circles -->
-            <!-- <div style="text-align:center">
-				<span class="dot" onclick="currentSlide(1)"></span>
-				<span class="dot" onclick="currentSlide(2)"></span>
-				<span class="dot" onclick="currentSlide(3)"></span>
-            </div> -->
-			<!-- </br> -->
-			<div class="tablet-slideshow-container">
+			<div id="tablet-slide" class="tablet-slideshow-container">
 				<!-- Full-width images with number and caption text --> 
-					<div style="display:unset;" class="mySlides fade">
-						<img src="marquis1.jpg" style="width:100%; height: 360px; border-radius: 8px"> 
+					<div style="display:unset;" class="myTabletSlides fade">
+						<img src="marquis1.jpg" style="width:100%; height: 360px; border-radius: 4px"> 
 						<div class="text">2215 Post Road</div>
 					</div>
-					<div class="mySlides fade">
-						<img src="pool11.jpg" style="width:100%; height: 360px; border-radius: 8px"> 
+					<div class="myTabletSlides fade">
+						<img src="pool11.jpg" style="width:100%; height: 360px; border-radius: 4px"> 
 						<div class="text">Pool</div>
 					</div>
-					<div class="mySlides fade">
-						<img src="northEast1.jpg" style="width:100%; height: 360px; border-radius: 8px"> 
+					<div class="myTabletSlides fade">
+						<img src="northEast1.jpg" style="width:100%; height: 360px; border-radius: 4px"> 
 						<!-- <div class="text">Caption Three</div> -->
 					</div>
-					<div class="mySlides fade">
-						<img src="northWest1.jpg" style="width:100%; height: 360px; border-radius: 8px"> 
+					<div class="myTabletSlides fade">
+						<img src="northWest1.jpg" style="width:100%; height: 360px; border-radius: 4px"> 
 						<!-- <div class="text">Caption Three</div> -->
 					</div>
-					<div class="mySlides fade">
-						<img src="southEast1.jpg" style="width:100%; height: 360px; border-radius: 8px"> 
+					<div class="myTabletSlides fade">
+						<img src="southEast1.jpg" style="width:100%; height: 360px; border-radius: 4px"> 
 						<!-- <div class="text">Caption Three</div> -->
 					</div>
-					<div class="mySlides fade">
-						<img src="pool12.jpg" style="width:100%; height: 360px; border-radius: 8px"> 
+					<div class="myTabletSlides fade">
+						<img src="pool12.jpg" style="width:100%; height: 360px; border-radius: 4px"> 
 						<div class="text">Pool</div>
 					</div>
-					<div class="mySlides fade">
-						<img src="dogPark1.jpg" style="width:100%; height: 360px; border-radius: 8px"> 
+					<div class="myTabletSlides fade">
+						<img src="dogPark1.jpg" style="width:100%; height: 360px; border-radius: 4px"> 
 						<div class="text">Dog Park</div>
 					</div>
-					<div class="mySlides fade">
-						<img src="exit1.jpg" style="width:100%; height: 360px; border-radius: 8px"> 
+					<div class="myTabletSlides fade">
+						<img src="exit1.jpg" style="width:100%; height: 360px; border-radius: 4px"> 
 						<div class="text">Exit</div>
 					</div>
 					<!-- Next and previous buttons -->
 					<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 					<a class="next" onclick="plusSlides(1)">&#10095;</a>
 			</div> 
-			<div class="mobile-slideshow-container">
+			<div id="mobile-slide" class="mobile-slideshow-container">
 				<!-- Full-width images with number and caption text --> 
-					<div style="display:unset;" class="mySlides fade">
-						<img src="marquis1.jpg" style="width:100%; height: 230px; border-radius: 8px"> 
+					<div style="display:unset;" class="myMobileSlides fade">
+						<img src="marquis1.jpg" style="width:100%; height: 230px; border-radius: 4px"> 
 						<div class="text">2215 Post Road</div>
 					</div>
-					<div class="mySlides fade">
-						<img src="pool11.jpg" style="width:100%; height: 230px; border-radius: 8px"> 
+					<div class="myMobileSlides fade">
+						<img src="pool11.jpg" style="width:100%; height: 230px; border-radius: 4px"> 
 						<div class="text">Pool</div>
 					</div>
-					<div class="mySlides fade">
-						<img src="northEast1.jpg" style="width:100%; height: 230px; border-radius: 8px"> 
+					<div class="myMobileSlides fade">
+						<img src="northEast1.jpg" style="width:100%; height: 230px; border-radius: 4px"> 
 						<!-- <div class="text">Caption Three</div> -->
 					</div>
-					<div class="mySlides fade">
-						<img src="northWest1.jpg" style="width:100%; height: 230px; border-radius: 8px"> 
+					<div class="myMobileSlides fade">
+						<img src="northWest1.jpg" style="width:100%; height: 230px; border-radius: 4px"> 
 						<!-- <div class="text">Caption Three</div> -->
 					</div>
-					<div class="mySlides fade">
-						<img src="southEast1.jpg" style="width:100%; height: 230px; border-radius: 8px"> 
+					<div class="myMobileSlides fade">
+						<img src="southEast1.jpg" style="width:100%; height: 230px; border-radius: 4px"> 
 						<!-- <div class="text">Caption Three</div> -->
 					</div>
-					<div class="mySlides fade">
-						<img src="pool12.jpg" style="width:100%; height: 230px; border-radius: 8px"> 
+					<div class="myMobileSlides fade">
+						<img src="pool12.jpg" style="width:100%; height: 230px; border-radius: 4px"> 
 						<div class="text">Pool</div>
 					</div>
-					<div class="mySlides fade">
-						<img src="dogPark1.jpg" style="width:100%; height: 230px; border-radius: 8px"> 
+					<div class="myMobileSlides fade">
+						<img src="dogPark1.jpg" style="width:100%; height: 230px; border-radius: 4px"> 
 						<div class="text">Dog Park</div>
 					</div>
-					<div class="mySlides fade">
-						<img src="exit1.jpg" style="width:100%; height: 230px; border-radius: 8px"> 
+					<div class="myMobileSlides fade">
+						<img src="exit1.jpg" style="width:100%; height: 230px; border-radius: 4px"> 
 						<div class="text">Exit</div>
 					</div>
 					<!-- Next and previous buttons -->
@@ -208,11 +221,12 @@
 						<ul>
 							<li><b>About Travis Oaks</b></li>
 							<br />
-							<li><a style="color:crimson" href="faqs.html">Read our FAQ</a></li>
+							<li><a style="color:crimson" href="faqs.html"><b>Read our FAQ</b></a></li>
 							<br />
 							<li><a style="color:crimson" href="https://maps.google.com/maps?f=q&amp;hl=en&amp;geocode=&amp;
 								q=2215+Post+Rd,+Austin,+TX+78704&amp;sll=37.0625,-95.677068&amp;sspn=95.737757,111.09375&amp;
-								ie=UTF8&amp;z=16&amp;iwloc=addr&amp;om=1" target="_blank">Where we're located</a></li>
+								ie=UTF8&amp;z=16&amp;iwloc=addr&amp;om=1" target="_blank"><b>Where we're located</b>
+							</a></li>
 						</ul>
 					</div>
 				</figure>
@@ -241,5 +255,6 @@
 			</footer>
 		</main>
 		<script src="travisAutoSlide.js"></script>
+		<script src="hamburger.js"></script>
 	</body>
 </html>
